# mango

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
config/: entities.example.yaml  entities.yaml  james.yaml  mom.yaml
src/email_digest/: config.py  dedup.py  main.py
src/email_digest/agent/: researcher.py
src/email_digest/digest/: formatter.py
src/email_digest/digest/templates/: digest.txt.j2
src/email_digest/sources/: base.py  nate_enrichment.py  rss.py  youtube.py
src/mango/: config.py  dedup.py  main.py
src/mango/agent/: recommender.py  researcher.py  vision.py
src/mango/digest/: formatter.py  sender.py
src/mango/digest/templates/: digest.html.j2  digest_mom.html.j2  digest_web.html.j2
src/mango/sources/: api.py  base.py  rss.py  web.py  youtube.py
